# snake_lockstep

./: .gitignore  CMakeLists.txt  build_game.sh
build_YEDEK/: CMakeCache.txt  Makefile  cmake_install.cmake  testAllegro
dlller/: liballegro.so.5.2.3  liballegro_audio.so.5.2.3  liballegro_main.so.5.2.3  liballegro_memfile.so.5.2  liballegro_physfs.so.5.2.3  liballegro_primitives.so.5.2  liballegro_video.so.5.2.3
dlller_asil/: liballegro_acodec.so.5.2.3  liballegro_font.so.5.2.3  liballegro_ttf.so.5.2.3
src/: asd  gameengine.cpp  gameengine.h  gamestate.h  introstate.cpp  introstate.h  macros.h  main.cpp  menubutton.cpp  menubutton.h  menustate.cpp  menustate.h  multiplayerstate.cpp  multiplayerstate.h  packet.cpp  packet.h  socket.cpp  socket.h
